--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -130,7 +130,7 @@ Implementation also requires collaboration among these parties. These are the ma
     <tr>
       <td> <a href="#3-preregister-trusted-operations">3. Preregister trusted operations</a> </td>
       <td>
-      Generate and publish a persisted queries manifest (PQM) to the PQL from you client's CI/CD pipeline.
+      Generate and publish a persisted queries manifest (PQM) to the PQL from your client's CI/CD pipeline.
       </td>
       <td>App developers</td>
     </tr>
@@ -142,7 +142,7 @@ Implementation also requires collaboration among these parties. These are the ma
         <br/>
         <em>This step provides performance benefits but isn't necessary for safelisting.</em>
       </td>
-      <td>App Developers</td>
+      <td>App developers</td>
     </tr>
   </tbody>
 </table>
