add small blurb about git context

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -120,6 +120,8 @@ The output also includes a Studio URL that provides full details on the changes 
 
 > If you've [integrated schema checks with your GitHub PRs](#integrating-with-github), the "Details" link in your GitHub check takes you to this same details page.
 
+Additionally, if you run a check within a Git repository, `rover subgraph check` will include both the commit hash and the author of said hash to GraphOS to display on the check.
+
 ### Rerunning checks
 
 You can rerun checks from GraphOS Studio:
